--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-blog",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
